# TashKalar

./: .gitignore  ImageManager.py  cards_pictures_order.py  constants.py  extract_cards_from_page.py  game_page.html  imageManager.py  j.json  main.py  main2.py  metadata.py  metadataManager.py  models.py  playground.py  pyproject.toml  square_quality_analysis.py  utils.py
bkp/: Etherweave.json  Southern.json  Sylvan.json  all_0.json  all_1.json  all_2.json  all_3.json  all_4.json  all_5.json  all_6.json  main.py
bkp/complete_jsons/: Everfrost.json  Flare.json  Highland.json  Imperial.json  Legends.json  Nethervoid.json  Sylvan.json  task.json
bkp/descriptions/: all_in_one.json
bkp/flares/: flares.json
bkp/legends/: Legends.json
bkp/tasks/: tasks.json
resources/: Southern.json
resources/descriptions/: Etherweave_2.json  Everfrost.json  Highland.json  Nethervoid.json  Northern.json  Sylvan.json
resources/descriptions/flares/: flares.json  flares_set.json
resources/descriptions/legends/: Legends.json
resources/descriptions/tasks/: tasks.json
src/: models.py
