[tool.poetry]
name = "tashkalar"
version = "0.1.0"
description = ""
authors = ["sgerodes <sgerodes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
webp = "^0.1.5"
pillow = "^9.4.0"
ordered-set = "^4.1.0"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
seaborn = "^0.12.2"
jinja2 = "^3.1.2"
opencv-python = "^4.7.0.72"
scipy = "^1.10.1"
colorama = "^0.4.6"
termcolor = "^2.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.254"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
